# hackers-mc-launcher

./: .clang-format  .gitmodules  CMakeLists.txt  HackersMCLauncher.sln  HackersMCLauncher.vcxproj  HackersMCLauncher.vcxproj.filters  README.md  Resource.rc  resource.h
.github/workflows/: build.yml
assets/: HackersMCLauncher.qrc  style.css
assets/lang/: en-US.lang
assets/translations/: hackersmclauncher_ru_RU.qm
src/: HackersMCLauncher.cpp  HackersMCLauncher.h  Launcher.cpp  Launcher.h  MyUpdater.cpp  MyUpdater.h  Settings.cpp  Settings.h  Style.cpp  Util.cpp  Util.h  launcher_config.h  main.cpp
src/Form/: Form.cpp  Form.h  JavaLibForm.cpp  JavaLibForm.h  LicenseForm.cpp  LicenseForm.h  ProfileForm.cpp  ProfileForm.h  RepositoryForm.cpp  RepositoryForm.h  SettingsForm.cpp  SettingsForm.h  UserForm.cpp  UserForm.h  VersionChooserForm.cpp  VersionChooserForm.h
src/Import/: IImporter.cpp  ModrinthV1.h
src/Layout/: StackedLayout.cpp  StackedLayout.h
src/Model/: Account.cpp  Account.h  ClasspathListModel.cpp  ClasspathListModel.h  DownloadEntry.cpp  DownloadEntry.h  DownloadsModel.cpp  DownloadsModel.h  FilterProxyModel.cpp  FilterProxyModel.h  GameArgsListModel.cpp  GameArgsListModel.h  GameProcess.h  GameProfile.cpp  GameProfile.h  JavaArgsListModel.cpp  JavaArgsListModel.h  JavaLibListModel.cpp  JavaLibListModel.h  JavaLibModel.cpp  JavaLibModel.h  Profile.cpp  Profile.h  ProfilesListModel.cpp  ProfilesListModel.h  RepositoriesModel.cpp  RepositoriesModel.h  Repository.cpp  Repository.h  Settings.cpp  Settings.h  State.cpp  State.h  User.cpp  User.h  UsersListModel.cpp  UsersListModel.h  Version.cpp  Version.h  VersionTreeModel.cpp  (+1 more)
src/Repository/: GameProfilesRepository.cpp  GameProfilesRepository.h  UsersRepository.cpp  UsersRepository.h
src/Source/: LegacyLauncherJsonSource.cpp  LegacyLauncherJsonSource.h
src/Util/: AuthTricks.cpp  AuthTricks.h  CommonUtils.cpp  CommonUtils.h  Crypto.cpp  Crypto.h  DefaultValidator.cpp  DefaultValidator.h  DownloadHelper.cpp  DownloadHelper.h  LambdaTask.h  SimpleTreeItem.h  StringHelper.cpp  StringHelper.h  UIHelper.cpp  UIHelper.h  UIThread.cpp  UIThread.h  Util.h  VariableHelper.cpp  VariableHelper.h  Zip.h
src/View/: AccountsComboBox.cpp  AccountsComboBox.h  Common.cpp  Common.h  GameProfilesView.cpp  GameProfilesView.h
src/Window/: AccountWindow.cpp  AccountWindow.h  ConsoleWindow.cpp  ConsoleWindow.h  GameConsoleWindow.cpp  GameConsoleWindow.h  GameProfileExportWindow.cpp  GameProfileExportWindow.h  GameProfileWindow.cpp  GameProfileWindow.h  ImportVersionWindow.cpp  ImportVersionWindow.h  LauncherSettingsWindow.cpp  LauncherSettingsWindow.h  MainWindow.cpp  MainWindow.h  UserWindow.cpp  UserWindow.h
src/import/: IImporter.h  ModrinthV1.cpp
src/model/: GameProfile.cpp  GameProfile.h  Modloader.h  Settings.h  State.cpp
src/source/: LegacyLauncherJsonSource.cpp  LegacyLauncherJsonSource.h
src/util/: AuthTricks.cpp  VariableHelper.cpp  VariableHelper.h
src/view/: Common.cpp  GameProfilesView.cpp  GameProfilesView.h
src/window/: AccountWindow.cpp  AccountWindow.h  GameConsoleWindow.h  GameProfileExportWindow.cpp  GameProfileExportWindow.h  ImportVersionWindow.cpp  ImportVersionWindow.h  LauncherSettingsWindow.cpp  LauncherSettingsWindow.h  MainWindow.cpp  MainWindow.h
tests/: .gitignore  AutoRefreshTest.cpp  CommonTest.cpp  ImportTest.cpp  MinecraftLaunchTest.cpp  TestUtil.cpp  TestUtil.h
translations/: hackersmclauncher_ru_RU.ts
ui/: HackersMCLauncher.ui  JavaLibForm.ui  LicenseForm.ui  ProfileForm.ui  RepositoryForm.ui  SettingsForm.ui  UserForm.ui  VersionChooserForm.ui
(+10 files in other folders)
